// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditTrip matches snapshot for creating new trip 1`] = `
<Spin
  size="default"
  spinning={false}
  tip="Submitting the trip"
  wrapperClassName=""
>
  <Prompt
    message="You may have unsaved changes, are you sure you want to leave the page?"
    when={true}
  />
  <Row
    gutter={
      Array [
        0,
        8,
      ]
    }
    justify="start"
  >
    <Col
      lg={
        Object {
          "span": 4,
        }
      }
      md={
        Object {
          "span": 3,
        }
      }
      sm={
        Object {
          "span": 2,
        }
      }
      xl={
        Object {
          "span": 5,
        }
      }
      xs={
        Object {
          "span": 0,
        }
      }
      xxl={
        Object {
          "span": 6,
        }
      }
    />
    <Col
      lg={
        Object {
          "span": 16,
        }
      }
      md={
        Object {
          "span": 18,
        }
      }
      sm={
        Object {
          "span": 20,
        }
      }
      xl={
        Object {
          "span": 14,
        }
      }
      xs={
        Object {
          "span": 24,
        }
      }
      xxl={
        Object {
          "span": 12,
        }
      }
    >
      <Title>
        It's time to put one down in the books
      </Title>
    </Col>
    <Col
      lg={
        Object {
          "span": 4,
        }
      }
      md={
        Object {
          "span": 3,
        }
      }
      sm={
        Object {
          "span": 2,
        }
      }
      xl={
        Object {
          "span": 5,
        }
      }
      xs={
        Object {
          "span": 0,
        }
      }
      xxl={
        Object {
          "span": 6,
        }
      }
    />
  </Row>
  <ForwardRef(InternalForm)
    form={
      Object {
        "__INTERNAL__": Object {},
        "getFieldError": [Function],
        "getFieldValue": [Function],
        "getFieldsError": [Function],
        "getFieldsValue": [Function],
        "getInternalHooks": [Function],
        "isFieldTouched": [Function],
        "isFieldValidating": [Function],
        "isFieldsTouched": [Function],
        "isFieldsValidating": [Function],
        "resetFields": [Function],
        "scrollToField": [Function],
        "setFields": [Function],
        "setFieldsValue": [Function],
        "submit": [Function],
        "validateFields": [Function],
      }
    }
    initialValues={Object {}}
    labelCol={
      Object {
        "lg": Object {
          "offset": 1,
          "span": 5,
        },
        "md": Object {
          "offset": 0,
          "span": 5,
        },
        "sm": Object {
          "span": 5,
        },
        "xl": Object {
          "offset": 2,
          "span": 5,
        },
        "xxl": Object {
          "offset": 3,
          "span": 5,
        },
      }
    }
    layout="horizontal"
    onFinish={[Function]}
    wrapperCol={
      Object {
        "lg": Object {
          "span": 12,
        },
        "md": Object {
          "span": 16,
        },
        "sm": Object {
          "span": 19,
        },
        "xl": Object {
          "span": 10,
        },
        "xxl": Object {
          "span": 8,
        },
      }
    }
  >
    <FormItem
      label="Trip Title"
      name="title"
      rules={
        Array [
          Object {
            "message": "Please input your trip title.",
            "required": true,
          },
        ]
      }
    >
      <Input
        maxLength={40}
        type="text"
      />
    </FormItem>
    <FormItem
      label="Date of Trip"
      name="dates"
      rules={
        Array [
          Object {
            "message": "Please input your trip date.",
            "required": true,
          },
        ]
      }
    >
      <RangePicker
        allowClear={true}
      />
    </FormItem>
    <FormItem
      name="public"
      valuePropName="checked"
      wrapperCol={
        Object {
          "lg": Object {
            "offset": 6,
            "span": 12,
          },
          "md": Object {
            "offset": 5,
            "span": 16,
          },
          "sm": Object {
            "offset": 5,
            "span": 19,
          },
          "xl": Object {
            "offset": 7,
            "span": 10,
          },
          "xxl": Object {
            "offset": 8,
            "span": 8,
          },
        }
      }
    >
      <Checkbox
        indeterminate={false}
      >
        Allow public access
      </Checkbox>
    </FormItem>
    <FormItem
      label="Details"
      name="details"
      rules={
        Array [
          Object {
            "message": "Pleaes input your trip details.",
            "required": true,
          },
        ]
      }
    >
      <TextArea
        autoSize={
          Object {
            "maxRows": 20,
            "minRows": 4,
          }
        }
        maxLength={1000}
      />
    </FormItem>
    <LocationSelect
      form={
        Object {
          "__INTERNAL__": Object {},
          "getFieldError": [Function],
          "getFieldValue": [Function],
          "getFieldsError": [Function],
          "getFieldsValue": [Function],
          "getInternalHooks": [Function],
          "isFieldTouched": [Function],
          "isFieldValidating": [Function],
          "isFieldsTouched": [Function],
          "isFieldsValidating": [Function],
          "resetFields": [Function],
          "scrollToField": [Function],
          "setFields": [Function],
          "setFieldsValue": [Function],
          "submit": [Function],
          "validateFields": [Function],
        }
      }
      latLngDelim=","
      layouts={
        Object {
          "layout": Object {
            "labelCol": Object {
              "lg": Object {
                "offset": 1,
                "span": 5,
              },
              "md": Object {
                "offset": 0,
                "span": 5,
              },
              "sm": Object {
                "span": 5,
              },
              "xl": Object {
                "offset": 2,
                "span": 5,
              },
              "xxl": Object {
                "offset": 3,
                "span": 5,
              },
            },
            "wrapperCol": Object {
              "lg": Object {
                "span": 12,
              },
              "md": Object {
                "span": 16,
              },
              "sm": Object {
                "span": 19,
              },
              "xl": Object {
                "span": 10,
              },
              "xxl": Object {
                "span": 8,
              },
            },
          },
          "tailLayout": Object {
            "wrapperCol": Object {
              "lg": Object {
                "offset": 6,
                "span": 12,
              },
              "md": Object {
                "offset": 5,
                "span": 16,
              },
              "sm": Object {
                "offset": 5,
                "span": 19,
              },
              "xl": Object {
                "offset": 7,
                "span": 10,
              },
              "xxl": Object {
                "offset": 8,
                "span": 8,
              },
            },
          },
        }
      }
      listName="locationList"
    />
    <S3Upload
      fieldName="files"
      form={
        Object {
          "__INTERNAL__": Object {},
          "getFieldError": [Function],
          "getFieldValue": [Function],
          "getFieldsError": [Function],
          "getFieldsValue": [Function],
          "getInternalHooks": [Function],
          "isFieldTouched": [Function],
          "isFieldValidating": [Function],
          "isFieldsTouched": [Function],
          "isFieldsValidating": [Function],
          "resetFields": [Function],
          "scrollToField": [Function],
          "setFields": [Function],
          "setFieldsValue": [Function],
          "submit": [Function],
          "validateFields": [Function],
        }
      }
      images={Array []}
    />
    <FormItem
      wrapperCol={
        Object {
          "lg": Object {
            "offset": 6,
            "span": 12,
          },
          "md": Object {
            "offset": 5,
            "span": 16,
          },
          "sm": Object {
            "offset": 5,
            "span": 19,
          },
          "xl": Object {
            "offset": 7,
            "span": 10,
          },
          "xxl": Object {
            "offset": 8,
            "span": 8,
          },
        }
      }
    >
      <Space>
        <Button
          block={false}
          ghost={false}
          htmlType="submit"
          loading={false}
          type="primary"
        >
          Submit
        </Button>
        <Button
          block={false}
          ghost={false}
          htmlType="button"
          loading={false}
          onClick={[Function]}
          type="link"
        >
          Cancel
        </Button>
      </Space>
    </FormItem>
  </ForwardRef(InternalForm)>
</Spin>
`;

exports[`EditTrip matches snapshot for editing existing trip 1`] = `
<Spin
  size="default"
  spinning={false}
  tip="Updating the trip"
  wrapperClassName=""
>
  <Prompt
    message="You may have unsaved changes, are you sure you want to leave the page?"
    when={true}
  />
  <Row
    gutter={
      Array [
        0,
        8,
      ]
    }
    justify="start"
  >
    <Col
      lg={
        Object {
          "span": 4,
        }
      }
      md={
        Object {
          "span": 3,
        }
      }
      sm={
        Object {
          "span": 2,
        }
      }
      xl={
        Object {
          "span": 5,
        }
      }
      xs={
        Object {
          "span": 0,
        }
      }
      xxl={
        Object {
          "span": 6,
        }
      }
    />
    <Col
      lg={
        Object {
          "span": 16,
        }
      }
      md={
        Object {
          "span": 18,
        }
      }
      sm={
        Object {
          "span": 20,
        }
      }
      xl={
        Object {
          "span": 14,
        }
      }
      xs={
        Object {
          "span": 24,
        }
      }
      xxl={
        Object {
          "span": 12,
        }
      }
    >
      <Title>
        What has changed?
      </Title>
    </Col>
    <Col
      lg={
        Object {
          "span": 4,
        }
      }
      md={
        Object {
          "span": 3,
        }
      }
      sm={
        Object {
          "span": 2,
        }
      }
      xl={
        Object {
          "span": 5,
        }
      }
      xs={
        Object {
          "span": 0,
        }
      }
      xxl={
        Object {
          "span": 6,
        }
      }
    />
  </Row>
  <ForwardRef(InternalForm)
    form={
      Object {
        "__INTERNAL__": Object {},
        "getFieldError": [Function],
        "getFieldValue": [Function],
        "getFieldsError": [Function],
        "getFieldsValue": [Function],
        "getInternalHooks": [Function],
        "isFieldTouched": [Function],
        "isFieldValidating": [Function],
        "isFieldsTouched": [Function],
        "isFieldsValidating": [Function],
        "resetFields": [Function],
        "scrollToField": [Function],
        "setFields": [Function],
        "setFieldsValue": [Function],
        "submit": [Function],
        "validateFields": [Function],
      }
    }
    initialValues={
      Object {
        "dates": Array [
          "2020-07-01T05:00:00.000Z",
          "2020-07-04T05:00:00.000Z",
        ],
        "details": "dummydetails",
        "locationList": Array [
          Object {
            "city": "dummycity1",
            "country": "dummycountry1",
            "fmtAddr": "dummyfmtaddr1",
            "latLng": "1,1",
            "state": "dummystate1",
          },
          Object {
            "city": "dummycity2",
            "country": "dummycountry2",
            "fmtAddr": "dummyfmtaddr2",
            "latLng": "2,2",
            "state": "dummystate2",
          },
        ],
        "public": true,
        "title": "dummytitle",
      }
    }
    labelCol={
      Object {
        "lg": Object {
          "offset": 1,
          "span": 5,
        },
        "md": Object {
          "offset": 0,
          "span": 5,
        },
        "sm": Object {
          "span": 5,
        },
        "xl": Object {
          "offset": 2,
          "span": 5,
        },
        "xxl": Object {
          "offset": 3,
          "span": 5,
        },
      }
    }
    layout="horizontal"
    onFinish={[Function]}
    wrapperCol={
      Object {
        "lg": Object {
          "span": 12,
        },
        "md": Object {
          "span": 16,
        },
        "sm": Object {
          "span": 19,
        },
        "xl": Object {
          "span": 10,
        },
        "xxl": Object {
          "span": 8,
        },
      }
    }
  >
    <FormItem
      label="Trip Title"
      name="title"
      rules={
        Array [
          Object {
            "message": "Please input your trip title.",
            "required": true,
          },
        ]
      }
    >
      <Input
        maxLength={40}
        type="text"
      />
    </FormItem>
    <FormItem
      label="Date of Trip"
      name="dates"
      rules={
        Array [
          Object {
            "message": "Please input your trip date.",
            "required": true,
          },
        ]
      }
    >
      <RangePicker
        allowClear={true}
      />
    </FormItem>
    <FormItem
      name="public"
      valuePropName="checked"
      wrapperCol={
        Object {
          "lg": Object {
            "offset": 6,
            "span": 12,
          },
          "md": Object {
            "offset": 5,
            "span": 16,
          },
          "sm": Object {
            "offset": 5,
            "span": 19,
          },
          "xl": Object {
            "offset": 7,
            "span": 10,
          },
          "xxl": Object {
            "offset": 8,
            "span": 8,
          },
        }
      }
    >
      <Checkbox
        indeterminate={false}
      >
        Allow public access
      </Checkbox>
    </FormItem>
    <FormItem
      label="Details"
      name="details"
      rules={
        Array [
          Object {
            "message": "Pleaes input your trip details.",
            "required": true,
          },
        ]
      }
    >
      <TextArea
        autoSize={
          Object {
            "maxRows": 20,
            "minRows": 4,
          }
        }
        maxLength={1000}
      />
    </FormItem>
    <LocationSelect
      form={
        Object {
          "__INTERNAL__": Object {},
          "getFieldError": [Function],
          "getFieldValue": [Function],
          "getFieldsError": [Function],
          "getFieldsValue": [Function],
          "getInternalHooks": [Function],
          "isFieldTouched": [Function],
          "isFieldValidating": [Function],
          "isFieldsTouched": [Function],
          "isFieldsValidating": [Function],
          "resetFields": [Function],
          "scrollToField": [Function],
          "setFields": [Function],
          "setFieldsValue": [Function],
          "submit": [Function],
          "validateFields": [Function],
        }
      }
      latLngDelim=","
      layouts={
        Object {
          "layout": Object {
            "labelCol": Object {
              "lg": Object {
                "offset": 1,
                "span": 5,
              },
              "md": Object {
                "offset": 0,
                "span": 5,
              },
              "sm": Object {
                "span": 5,
              },
              "xl": Object {
                "offset": 2,
                "span": 5,
              },
              "xxl": Object {
                "offset": 3,
                "span": 5,
              },
            },
            "wrapperCol": Object {
              "lg": Object {
                "span": 12,
              },
              "md": Object {
                "span": 16,
              },
              "sm": Object {
                "span": 19,
              },
              "xl": Object {
                "span": 10,
              },
              "xxl": Object {
                "span": 8,
              },
            },
          },
          "tailLayout": Object {
            "wrapperCol": Object {
              "lg": Object {
                "offset": 6,
                "span": 12,
              },
              "md": Object {
                "offset": 5,
                "span": 16,
              },
              "sm": Object {
                "offset": 5,
                "span": 19,
              },
              "xl": Object {
                "offset": 7,
                "span": 10,
              },
              "xxl": Object {
                "offset": 8,
                "span": 8,
              },
            },
          },
        }
      }
      listName="locationList"
    />
    <S3Upload
      fieldName="files"
      form={
        Object {
          "__INTERNAL__": Object {},
          "getFieldError": [Function],
          "getFieldValue": [Function],
          "getFieldsError": [Function],
          "getFieldsValue": [Function],
          "getInternalHooks": [Function],
          "isFieldTouched": [Function],
          "isFieldValidating": [Function],
          "isFieldsTouched": [Function],
          "isFieldsValidating": [Function],
          "resetFields": [Function],
          "scrollToField": [Function],
          "setFields": [Function],
          "setFieldsValue": [Function],
          "submit": [Function],
          "validateFields": [Function],
        }
      }
      images={
        Array [
          Object {
            "S3Url": "dummys3url",
            "fileUrlName": "dummyurlname",
            "name": "dummyname",
          },
        ]
      }
    />
    <FormItem
      wrapperCol={
        Object {
          "lg": Object {
            "offset": 6,
            "span": 12,
          },
          "md": Object {
            "offset": 5,
            "span": 16,
          },
          "sm": Object {
            "offset": 5,
            "span": 19,
          },
          "xl": Object {
            "offset": 7,
            "span": 10,
          },
          "xxl": Object {
            "offset": 8,
            "span": 8,
          },
        }
      }
    >
      <Space>
        <Button
          block={false}
          ghost={false}
          htmlType="submit"
          loading={false}
          type="primary"
        >
          Update
        </Button>
        <Button
          block={false}
          ghost={false}
          htmlType="button"
          loading={false}
          onClick={[Function]}
          type="link"
        >
          Cancel
        </Button>
      </Space>
    </FormItem>
  </ForwardRef(InternalForm)>
</Spin>
`;
